--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
-        <img id="userdisplaylogo"></img>
+        <img id="userdisplaylogo" style="border-radius: 20px;"></img>
         <h1 class="text-uppercase mb-0" id="displayusername"></h1>
         <hr class="star-light">
         <h2 class="font-weight-light mb-0" id="userbasicinfo"></h2>
 		<h2 class="font-weight-light mb-0" id="usermessagecount"></h2>
+		<h2 class="font-weight-light mb-0" id="activitycount"></h2>
       </div>
     </header>
 
@@ -90,7 +91,7 @@
 			</div>
 			<footer class="cont teal">
 			<div class="center">
-			<button class="button green" onclick="myFunction(user.value);">Get Stats</button>
+			<a class="btn btn-xl btn-outline-light" id="profileonscratch" onclick="myFunction(user.value)">Get Stats</a>
 			</div>
            </footer>
           </div>
@@ -177,7 +178,7 @@ function loadpagefromAPI() {
     document.getElementById("wiwo").innerHTML = userdescription;
     updatepageuser();
     getMessageCount();
-	getGlobalProjects();
+	getActivity();
 }
 function getElementFromAPI(API,element,isinterger) {
     var str = "";
@@ -211,7 +212,18 @@ xhttp.open("GET", "https://api.scratch.mit.edu/users/" + scratchusername + "/mes
 xhttp.send();
 }
       
-function openscratchuser() { window.open("https://scratch.mit.edu/users/" + scratchusername);
+function openscratchuser() { window.open("https://scratch.mit.edu/users/" + scratchusername);}
+function getActivity() {
+	var xhttp = new XMLHttpRequest();
+	xhttp.open('GET', 'https://scratch.mit.edu/messages/ajax/user-activity/?user=' + scratchusername + '&max=1000000', true);
+	xhttp.send();
+	xhttp.onreadystatechange = function() {
+		if (this.readyState == 4 && this.status == 200) {
+			var responsex = xhttp.responseText;
+			var countactivity = (responsex.match(/<li>/g) || []).length;
+			document.getElementById("activitycount").innerHTML = "Total Activity Actions: " + countactivity;
+		}
+	};
 }
 </script>
     </html>
