--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
@@ -87,6 +86,84 @@
     <!-- About Section -->
     <section class="bg-primary text-white mb-0" id="about">
       <div class="container">
+	  <h2 class="text-center text-uppercase text-white">Following</h2>
+	  <hr class="star-light">
+	  <br>
+	  <center>
+	  <table>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="title"></p>
+	  <img id="thumb" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl1"></p>
+	  <img id="thumb1" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl2"></p>
+	  <img id="thumb2" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl3"></p>
+	  <img id="thumb3" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl4"></p>
+	  <img id="thumb4" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  </table>
+	  </center>
+	  <br>
+	  <br>
+	  <h2 class="text-center text-uppercase text-white">Followers</h2>
+	  <hr class="star-light">
+	  <br>
+	  <center>
+	  <table>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="t1"></p>
+	  <img id="thum2" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl11"></p>
+	  <img id="thum21" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl12"></p>
+	  <img id="thum22" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl13"></p>
+	  <img id="thum23" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  <td>
+	  <center>
+	  <p class="font-weight-light mb-0" id="titl14"></p>
+	  <img id="thum24" style="width: 60px; height: 60px; border-radius: 20px;"></img>
+	  </center>
+	  </td>
+	  </table>
+	  </center>
+	  <br>
+	  <br>
         <h2 class="text-center text-uppercase text-white">About</h2>
         <hr class="star-light mb-5">
         <div class="row">
@@ -111,10 +188,10 @@
 	    <div class="modal-content card-4">
 		   <header class="cont teal">
 		   <span onclick="document.getElementById('id01').style.display='none'" class="button large display-topright">&times;</span>
-		   <h2 class="font-weight-light mb-0">Enter Scratcher Username or URL</h2>
+		   <h2 class="font-weight-light mb-0">Enter Scratcher Username</h2>
 		   </header>
 		   <div class="cont light-grey">
-		   <input id="user" class="input animate-input" style="border:0!important; width:30%;" type="text" placeholder="griffpatch" required>
+		   <input id="user" class="input animate-input" style="border:0!important; width:30%;" type="text" value="griffpatch" placeholder="griffpatch" required>
 			</div>
 			<footer class="cont teal">
 			<div class="center">
