--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
     <!-- Header -->
     <header class="masthead bg-primary text-white text-center">
       <div class="container">
+	    <center><iframe scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:325px; height:35px;" allowtransparency="true" id="reactions"></iframe></center>
+		<br>
         <img id="userdisplaylogo" style="border-radius: 20px;"></img>
         <h1 class="text-uppercase mb-0" id="displayusername"></h1>
 		<h2 class="font-weight-light mb-0" id="dev"></h2>
