--- a/globalstats.html
+++ b/globalstats.html
@@ -27,7 +27,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
 		    <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#">Global Stats</a>
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger">Global Stats</a>
+            </li>
+			</li>
+			<li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="projects.html">Search Projects</a>
             </li>
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="index.html">Search Users</a>
